--- a/docs/source/onnxruntime/usage_guides/quantization.mdx
+++ b/docs/source/onnxruntime/usage_guides/quantization.mdx
@@ -22,7 +22,7 @@ while the latter effectively handles quantization.
 
 <Tip>
 
-You can read the [conceptual guide on quantization](/concept_guides/quantization) to learn about quantization. It
+You can read the [conceptual guide on quantization](../concept_guides/quantization) to learn about quantization. It
 explains the main concepts that you will be using when performing quantization with the
 [`~optimum.onnxruntime.ORTQuantizer`].
 
