Fix broken link in doc (#1222)

--- a/docs/source/onnxruntime/usage_guides/quantization.mdx
+++ b/docs/source/onnxruntime/usage_guides/quantization.mdx
@@ -22,7 +22,7 @@ while the latter effectively handles quantization.
 
 <Tip>
 
-You can read the [conceptual guide on quantization](/concept_guides/quantization) to learn about quantization. It
+You can read the [conceptual guide on quantization](../../concept_guides/quantization) to learn about quantization. It
 explains the main concepts that you will be using when performing quantization with the
 [`~optimum.onnxruntime.ORTQuantizer`].
 
@@ -63,7 +63,7 @@ Quantizing an ONNX model can be done as follows:
  optimum-cli onnxruntime quantize --onnx_model onnx_model_location/ --avx512 -o quantized_model/
 ```
 
-This quantize all the ONNX files in `onnx_model_location` with the AVX-512 instructions. 
+This quantize all the ONNX files in `onnx_model_location` with the AVX-512 instructions.
 
 ## Creating an `ORTQuantizer`
 
