--- a/docs/source/installation.mdx
+++ b/docs/source/installation.mdx
@@ -26,6 +26,7 @@ If you'd like to use the accelerator-specific features of 🤗 Optimum, you can 
 | [Intel Neural Compressor (INC)](https://www.intel.com/content/www/us/en/developer/tools/oneapi/neural-compressor.html) | `pip install --upgrade-strategy eager optimum[neural-compressor]`  |
 | [Intel OpenVINO](https://docs.openvino.ai/latest/index.html)                                                           | `pip install --upgrade-strategy eager optimum[openvino,nncf]`      |
 | [Habana Gaudi Processor (HPU)](https://habana.ai/training/)                                                            | `pip install --upgrade-strategy eager optimum[habana]`             |
+| [FuriosaAI](https://www.furiosa.ai/)                                                                                   | `pip install --upgrade-strategy eager optimum[furiosa]`            |
 
 The `--upgrade-strategy eager` option is needed to ensure the different packages are upgraded to the latest possible version.
 
