why wouldn't this be fine?

--- a/docs/source/onnxruntime/package_reference/modeling_ort.mdx
+++ b/docs/source/onnxruntime/package_reference/modeling_ort.mdx
@@ -113,6 +113,7 @@ The following ORT classes are available for the following custom tasks.
 #### ORTStableDiffusionPipeline
 
 [[autodoc]] onnxruntime.ORTStableDiffusionPipeline
+    - __call__
 
 #### ORTStableDiffusionImg2ImgPipeline
 
