--- a/docs/source/optimization_toolbox/usage_guides/quantization.mdx
+++ b/docs/source/optimization_toolbox/usage_guides/quantization.mdx
@@ -1,24 +1,24 @@
 # Quantization
 
-## `AutoGPTQ` Integration
+## AutoGPTQ Integration
 
-🤗 Optimum collaborated with `AutoGPTQ` library to provide a simple API that apply GPTQ quantization on language models.  With GPTQ quantization, you can quantize your favorite lanmguage model to 8,6,4 or even 2 bits. This comes without a big drop of performance and with faster inference speed. This is supported by most GPU hardwares.
+🤗 Optimum collaborated with [AutoGPTQ library](https://github.com/PanQiWei/AutoGPTQ) to provide a simple API that apply GPTQ quantization on language models.  With GPTQ quantization, you can quantize your favorite language model to 8, 6, 4 or even 2 bits. This comes without a big drop of performance and with faster inference speed. This is supported by most GPU hardwares.
 
 If you want to quantize 🤗 Transformers models with GPTQ, follow this [documentation](https://huggingface.co/docs/transformers/main_classes/quantization). 
 
-To learn more about the the quantization model, check out: 
+To learn more about the quantization technique used in GPTQ, please refer to: 
 - the [GPTQ](https://arxiv.org/pdf/2210.17323.pdf) paper
-- the [`AutoGPTQ`](https://github.com/PanQiWei/AutoGPTQ) library used as the backend
-For more advanced usage (triton backend and fused attention), please check out the `auto-gptq` library in more details.
+- the [AutoGPTQ](https://github.com/PanQiWei/AutoGPTQ) library used as the backend
+Note that the AutoGPTQ library provides more advanced usage (triton backend, fused attention, fused MLP) that are not integrated with Optimum. For now, we leverage only the CUDA kernel for GPTQ.
 
 ### Requirements
 
 You need to have the following requirements installed to run the code below: 
 
-- Install latest `AutoGPTQ` library
+- AutoGPTQ library:
 `pip install auto-gptq`
 
-- Install latest `optimum` from source 
+- Optimum library:
 `pip install --upgrade git+https://github.com/huggingface/optimum.git`
 
 - Install latest `transformers` from source 
@@ -27,7 +27,7 @@ You need to have the following requirements installed to run the code below:
 - Install latest `accelerate` library 
 `pip install --upgrade accelerate`
 
-### Load and quantize model
+### Load and quantize a model
 
 The [`~optimum.gptq.GPTQQuantizer`] class is used to quantize your model. In order to quantize your model, you need to provide a few arguemnts:
 - the number of bits: `bits`
@@ -49,10 +49,10 @@ quantized_model = quantizer.quantize_model(quantized_model, tokenizer)
 ```
 
 <Tip warning={true}>
-GPTQ quantization only works for text model for now. Futhermore, the quantization process can a lot of time depending on one's hardware (175B model = 4 gpu hours using NVIDIA A100). Please check on the hub if there is not a GPTQ quantized version of the model. If not, you can submit a demand on github. 
+GPTQ quantization only works for text model for now. Futhermore, the quantization process can take a lot of time depending on one's hardware (175B model = 4 gpu hours using NVIDIA A100). Please check on the Hugging Face Hub if there is not already a GPTQ quantized version of the model you would like to quantize.
 </Tip>
 
-### Save model
+### Save the model
 
 To save your model, use the save method from [`~optimum.gptq.GPTQQuantizer`] class. It will create a folder with your model state dict along with the quantization config.
 ```python
@@ -66,10 +66,10 @@ You can load your quantized weights by using the [`~optimum.gptq.load_quantized_
 ```python
 from optimum.gptq import load_quantized_model
 model = AutoModelForCausalLM.from_pretrained(model_name, torch_dtype=torch.float16)
-model_from_saved = load_quantized_model(model, save_folder=save_folder, device_map = "auto")
+model_from_saved = load_quantized_model(model, save_folder=save_folder, device_map="auto")
 ```
 
-You can also load your model faster and without using more memory with `accelerate`. You need to initialize an empty model and laod the quantized weights.
+Through the Accelerate library, it is also possible to load a model faster with a lower memory usage. The model needs to be initialized using empty weights, with weights loaded as a next step.
 ```python
 from accelerate import init_empty_weights
 with init_empty_weights():
