--- a/docs/source/quicktour.mdx
+++ b/docs/source/quicktour.mdx
@@ -12,6 +12,8 @@ specific language governing permissions and limitations under the License.
 
 # Quick tour
 
+Hey I did a change here!
+
 This quick tour is intended for developers who are ready to dive into the code and see examples of how to integrate 🤗 Optimum into their model training and inference workflows.
 
 ## Accelerated inference
