--- a/docs/source/llm_quantization/usage_guides/quantization.mdx
+++ b/docs/source/llm_quantization/usage_guides/quantization.mdx
@@ -97,8 +97,8 @@ Please have a look at [`peft`](https://github.com/huggingface/peft) library for 
 
 ### References
 
-[[autodoc]] gtpq.GPTQQuantizer
+[[autodoc]] gptq.GPTQQuantizer
     - all
 
-[[autodoc]] gtpq.load_quantized_model
+[[autodoc]] gptq.load_quantized_model
     - all
