--- a/docs/source/onnxruntime/package_reference/modeling_ort.mdx
+++ b/docs/source/onnxruntime/package_reference/modeling_ort.mdx
@@ -148,6 +148,8 @@ The following ORT classes are available for the following custom tasks.
 
 #### ORTStableDiffusionPipeline
 
+will this build?
+
 [[autodoc]] onnxruntime.ORTStableDiffusionPipeline
     - __call__
 
