--- a/docs/source/exporters/onnx/overview.mdx
+++ b/docs/source/exporters/onnx/overview.mdx
@@ -98,3 +98,10 @@ Supported architectures:
 - XLM
 - XLM-Roberta
 - Yolos
+
+Supported architectures (Timm):
+- Resnext50-32x4d
+- Resnext50d-32x4d
+- Resnext101-32x4d
+- Resnext101-32x8d
+- Resnext101-64x4d
