[Better Transformer] Add MusicGen

--- a/docs/source/bettertransformer/overview.mdx
+++ b/docs/source/bettertransformer/overview.mdx
@@ -62,6 +62,7 @@ The list of supported model below:
 - [Marian](https://arxiv.org/abs/1804.00344)
 - [MBart](https://arxiv.org/abs/2001.08210)
 - [M2M100](https://arxiv.org/abs/2010.11125)
+- [MusicGen](https://arxiv.org/abs/2306.05284)
 - [OPT](https://arxiv.org/abs/2205.01068)
 - [ProphetNet](https://arxiv.org/abs/2001.04063)
 - [RemBERT](https://arxiv.org/abs/2010.12821)
